--- a/calendar-project/netlify.toml
+++ b/calendar-project/netlify.toml
@@ -1,3 +1,2 @@
-[build]
-publish = "calendar"         # Path to the static files directory (relative to root)
-functions = "functions"      # Path to the functions directory (relative to root)
+[functions]
+directory = "calendar-project/functions"
